# gir

./: .gitignore  Makefile  README.md  example.json  gir-hook.py  gir-post-hook-v2.py  gir-post-hook.py  gir-relearn.py  pyproject.toml
docs/: ROADMAP.md
src/gir/: __init__.py  config.py  decompose.py  hook.py  learned.py  log.py  relearn.py  skeleton.py  tally.py
tests/: conftest.py  test_blocklist_coverage.py  test_config.py  test_decompose.py  test_hook.py  test_integration.py  test_learned.py  test_log.py  test_relearn.py  test_skeleton.py  test_tally.py
